--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,5 @@
 header {
   width: 100%;
-  height: 200px;
 }
 
 #container {
@@ -30,6 +29,34 @@ ul {
 li {
   display: inline-block;
   margin: 0 10px;
+}
+
+main {
+  background-color: #1C1C1C;
+}
+
+.container {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px 0;
+  color: white;
+  text-transform: uppercase;
+}
+
+.card {
+  width: calc(100% / 6);
+  margin: 20px 0;
+}
+
+.card img {
+  width: 85%;
+}
+
+.card p {
+  font-size: 13px;
+  margin-top: 10px;
 }
 
 * {
