--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,7 +26,7 @@ ul {
   list-style: none;
 }
 
-li {
+header li {
   display: inline-block;
   margin: 0 10px;
 }
@@ -57,6 +57,61 @@ main {
 .card p {
   font-size: 13px;
   margin-top: 10px;
+}
+
+footer {
+  height: 500px;
+  width: 100%;
+}
+
+#dc_section {
+  height: 75%;
+  width: 100%;
+  background-image: url(/img/footer-bg.jpg);
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.column {
+  margin-right: 20px;
+}
+
+#list {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+#list ul {
+  list-style: none;
+}
+
+#list li {
+  color: #797979;
+  font-size: 13px;
+  font-weight: bolder;
+  margin: 5px 0;
+}
+
+h3 {
+  margin: 10px 0;
+  text-transform: uppercase;
+  color: white;
+}
+
+#logo {
+  width: 50%;
+}
+
+#logo img {
+  width: 70%;
+}
+
+#link_section {
+  width: 100%;
+  height: 25%;
+  background-color: #303030;
 }
 
 * {
