--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,29 @@
-header {
+@import url(https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;
+
+700&display=swap);header {
   width: 100%;
+}
+
+#blu_line {
+  height: 30px;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: white;
+  background-color: #0281F8;
+}
+
+#blu_line div {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 70%;
+  margin: 0 auto;
+  height: 100%;
+  padding: 0 40px;
+}
+
+#blu_line p {
+  margin: 0 20px;
 }
 
 #container {
@@ -10,6 +34,8 @@ header {
 }
 
 nav {
+  width: 70%;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,6 +55,8 @@ ul {
 header li {
   display: inline-block;
   margin: 0 10px;
+  font-size: 15px;
+  font-weight: bolder;
 }
 
 main {
@@ -118,5 +146,9 @@ h3 {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: "Noto Sans JP", sans-serif;
 }
 
