--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,9 +2,15 @@
 @import 'partials/home.scss';
 @import 'partials/footer.scss';
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+
 
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: 'Noto Sans JP', sans-serif;
 }
